# ChangeLog for sys-apps/man-pages
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.71 2007/04/30 18:50:33 vapier Exp $

*man-pages-2.46 (30 Apr 2007)

  30 Apr 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.46.ebuild:
  Version bump.

*man-pages-2.44 (08 Apr 2007)

  08 Apr 2007; Mike Frysinger <vapier@gentoo.org> +man-pages-2.44.ebuild:
  Version bump.

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org> man-pages-2.43.ebuild:
  Stable on ppc.

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> man-pages-2.43.ebuild:
  Stable on sparc

  21 Mar 2007; Raúl Porcel <armin76@gentoo.org> man-pages-2.43.ebuild:
  x86 stable

*man-pages-2.43 (02 Dec 2006)

  02 Dec 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.43.ebuild:
  Version bump.

  02 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> man-pages-2.41.ebuild,
  man-pages-2.42.ebuild:
  Block libiconv, as this and that both install iconv(3) manpage.

*man-pages-2.42 (26 Nov 2006)

  26 Nov 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.42.ebuild:
  Version bump.

*man-pages-2.41 (13 Oct 2006)

  13 Oct 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.41.ebuild:
  Version bump.

*man-pages-2.39 (09 Aug 2006)

  09 Aug 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.39.ebuild:
  Version bump.

*man-pages-2.38 (04 Aug 2006)

  04 Aug 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.38.ebuild:
  Version bump.

*man-pages-2.36 (30 Jul 2006)

  30 Jul 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.36.ebuild:
  Version bump.

*man-pages-2.34 (20 Jun 2006)

  20 Jun 2006; Mike Frysinger <vapier@gentoo.org> +man-pages-2.34.ebuild:
  Version bump.

*man-pages-2.33 (07 Jun 2006)

  07 Jun 2006; Mike Frysinger <vapier@gentoo.org> man-pages-2.32.ebuild,
  +man-pages-2.33.ebuild:
  Version bump.

*man-pages-2.32 (17 May 2006)
